--- a/src/index.html
+++ b/src/index.html
@@ -22,9 +22,10 @@
         />
       </label>
       <button type="submit">Search</button>
-      <span class="loader"></span>
     </form>
     <ul class="gallery"></ul>
+    <button type="button" class="load-more visually-hidden">Load more</button>
+    <span class="loader"></span>
     <script type="module" src="./main.js"></script>
   </body>
 </html>
